# IMAP-I-ALiRT-Explorer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  demo.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: python-ci.yml
docs/: architecture.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  types.ts  vite-env.d.ts
frontend/src/components/: AnomalyPanel.tsx  CalibrationLab.tsx  InstrumentSelector.tsx  LiveTimeSeries.tsx  StatsCards.tsx
src/ialirt_explorer/: __init__.py  analytics.py  ingestion.py  parallel.py  visualization.py
src/ialirt_explorer/service/: __init__.py  __main__.py  api.py  poller.py  pubsub.py
tests/: test_analytics.py  test_ingestion.py  test_parallel.py  test_pubsub.py  test_service_api.py
