[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imap-ialirt-explorer"
version = "0.1.0"
description = "Research-grade IMAP I-ALiRT ingestion, calibration, analytics, and visualization toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Amrutha Junnuri"}]
keywords = ["IMAP", "I-ALiRT", "space weather", "heliophysics", "research software"]
dependencies = [
  "cdflib>=1.3.4",
  "imap-data-access>=0.39.0",
  "matplotlib>=3.8",
  "numba>=0.60; python_version < '3.13'",
  "numpy>=1.26",
  "pandas>=2.2",
  "requests>=2.31",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=ialirt_explorer --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
