[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imap-ialirt-explorer"
version = "0.2.0"
description = "Live ingestion, calibration, analytics, and visualization toolkit for IMAP I-ALiRT space-weather data."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Amrutha Junnuri"}]
keywords = ["IMAP", "I-ALiRT", "space weather", "heliophysics", "real time"]
dependencies = [
  "cdflib>=1.3.4",
  "dask[distributed]>=2024.5",
  "fastapi>=0.115",
  "httpx>=0.27",
  "ialirt-data-access>=0.10.0",
  "matplotlib>=3.8",
  "numba>=0.60; python_version < '3.13'",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "requests>=2.31",
  "seaborn>=0.13",
  "uvicorn[standard]>=0.30",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
ialirt-explorer-service = "ialirt_explorer.service.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=ialirt_explorer --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
